[FIX] 从剪切板粘贴图片